data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_762.wast
;; 3. **Test Description**:    Insert a single `nop` before the `br_table` that has a high index value. This test confirms that placing `nop` right before `br_table` does not alter execution flow or index handling.      **Specific Constraint**: Ensures `nop` does not disrupt the single-step validation of `br_table`.      **Edge Case**: High index value in `br_table`.

(assert_invalid
  (module (func $test (block (nop) (br_table 0))))
  "invalid branch table index"
)